Updates from ShareLaTeX

--- a/ttm4905_msc/abstract_english.tex
+++ b/ttm4905_msc/abstract_english.tex
@@ -3,7 +3,7 @@
 Several establishments worldwide are growing in size and see frequent internal changes in buildings, which presents a demand to manage and accommodate these changes in order to maintain a satisfied customer base. One way to offset the inconveniences that this may cause, is through an indoor mapping service. Providing an up-to-date, interactive and digital indoor mapping service may offer benefits to establishments and its clients alike. MazeMap is a company specialising in providing indoor mapping services to a wide selection of customers ranging from universities and hospitals, to sporting arenas and cruise ships. With the software as a service style of product delivery becoming a delivery method of choice among a large portion of software development companies, new business models has emerged as a result. One such model is the so-called freemium model, thoroughly tested in the consumer market but not in the business and enterprise market.
 
 
-This thesis aims to propose a freemium-based business model for companies such as MazeMap, that are willing to try new business models in B2B and B2B\&C markets. In order to propose such a business model, an international survey has been conducted, and companies that successfully employs the freemium business model in business-oriented markets, has been investigated. The survey targeted higher education institutions, receiving 39 responses from responders worldwide with 14 different countries being represented. In the results, 64.1\% expressed an initial interest in an indoor mapping service, which subsequently increased to 84.6\% after the potential benefits of such a service was been stated. In the paradigm of freemium, the fact that the few pays for the many is a central theme. In relation to this, the survey measured the respondents' willingness to pay for premium features, with the results being in line with the expectation that few would indicate a strong willingness to pay for these features. 
+This thesis aims to propose a freemium-based business model for companies such as MazeMap, who are willing to try new business models in B2B and B2B\&C markets. In order to propose such a business model, an international survey has been conducted, and companies that successfully employs the freemium business model in business-oriented markets, has been investigated. The survey targeted higher education institutions, receiving 39 responses from responders worldwide with 14 different countries being represented. In the results, 64.1\% expressed an initial interest in an indoor mapping service, which subsequently increased to 84.6\% after the potential benefits of such a service was been stated. In the paradigm of freemium, the fact that the few pays for the many is a central theme. In relation to this, the survey measured the respondents' willingness to pay for premium features, with the results being in line with the expectation that few would indicate a strong willingness to pay for these features. 
 
 
 Based upon the success factors of the companies that successfully employs the freemium business model along with the survey results, a business model was proposed. This model was built in the framework that is the Business Model Canvas, and provides both a textual and visual representation of the presented business model. 
