--- a/ttm4905_msc/main.tex
+++ b/ttm4905_msc/main.tex
@@ -53,8 +53,8 @@
 
 % similarly you may add a separate acknowledgments page
 
-\include{acknowledgments}
-\cleardoublepage
+%\include{acknowledgments}
+%\cleardoublepage
 
 \tableofcontents*
 \cleardoublepage
@@ -90,7 +90,6 @@
 \include{chapter5}
 \include{chapter6}
 \include{chapter7}
-\include{chapter8}
 
 %% include here the other chapters
 
